# pathology-classifier

./: README.md  pyproject.toml
src/: evaluate.py
