[project]
name = "pathology-classifier"
version = "0.1.0"
description = "10-class pathology image classifier"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "loguru>=0.7.3",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "onnx>=1.19.1",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "torch[onnx]>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
]
